network/specific-ip-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.0.1/32
            except:
              - 192.168.0.1/24
      ports:
        - protocol: TCP
          port: 3306
